# Satellite-Clock

./: Cargo.toml  README.md  wokwi.toml
.cargo/: config.toml
src/: main.rs  time.rs
